[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemy/Pear/Model/PearModel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy/Pear/Pear.gd" type="Script" id=3]

[sub_resource type="CapsuleShape" id=1]
height = 1.44027

[sub_resource type="RayShape" id=2]
length = 1.88254

[node name="EnemyPear" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="CollisionShape" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 2.27547, 0 )
shape = SubResource( 1 )

[node name="LowerCollisionShape" type="CollisionShape" parent="." index="1"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.856443, 0 )
shape = SubResource( 2 )

[node name="AttackTimer" parent="." index="3"]
wait_time = 0.5

[node name="ShootTimer" type="Timer" parent="." index="5"]

[node name="Pear" parent="." index="9" instance=ExtResource( 1 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_AttackArea_body_exited"]
